--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ composer.phar
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
 /.idea
+*.log
+/www/robots.txt
+/www/sitemap.xml
