ignore other files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-composer.phar
-/vendor/
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
 /.idea
 *.log
 /www/robots.txt
 /www/sitemap.xml
+application/cache/
+application/composer.lock
+application/vendor/
+www/config.inc.php
