--- a/.env.example
+++ b/.env.example
@@ -26,12 +26,18 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=contact@publishr.online
+MAIL_FROM_NAME="Publishr Online"
+MAIL_ADMIN=contact@publishr.online
+
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
